# Day-And-Night-System

./: CMakeLists.txt  README.md  about.md  changelog.md  mod.json
src/: ChallengesPage.cpp  CreatorLayer.cpp  DailyLevelPage.cpp  DemonInfoPopup.cpp  EditLevelLayer.cpp  FRequestProfilePage.cpp  FriendsProfilePage.cpp  GJAccountSettingsLayer.cpp  GJPathsLayer.cpp  GJPromoPopup.cpp  InfoLayer.cpp  LeaderboardsLayer.cpp  LevelAreaLayer.cpp  LevelBrowserLayer.cpp  LevelInfoLayer.cpp  LevelLeaderboard.cpp  LevelListLayer.cpp  LevelSearchLayer.cpp  LevelSelectLayer.cpp  LikeItemLayer.cpp  LoadingLayer.cpp  MenuGameLayer.cpp  MenuLayer.cpp  MessagesProfilePage.cpp  MoreOptionsLayer.cpp  MoreSearchLayer.cpp  MoreVideoOptionsLayer.cpp  ProfilePage.cpp  RateDemonLayer.cpp  RateStarsLayer.cpp  RewardsPage.cpp  SetFolderPopup.cpp  SetIDPopup.cpp  SetTextPopup.cpp  ShareCommentLayer.cpp  ShareLevelLayer.cpp  ShareLevelSettingsLayer.cpp  StarInfoPopup.cpp  TutorialLayer.cpp  UploadActionPopup.cpp  (+4 more)
src/Utils/: utils.cpp  utils.hpp
src/modify/alphalaneous.random_tab/: RandomLayer.cpp
src/modify/anticroom.ddl-integration/: DDLListLayer.cpp
src/modify/arcticwoof.rated_layouts/: RLCreatorLayer.cpp  RLGauntletLevelsLayer.cpp  RLGauntletSelectLayer.cpp  RLLeaderboardLayer.cpp  RLLevelBrowserLayer.cpp  RLMenuLayer.cpp  RLSearchLayer.cpp  RLSpireLayer.cpp
src/modify/cvolton.betterinfo/: CustomCreatorLayer.cpp  DailyViewLayer.cpp  LeaderboardViewLayer.cpp  LevelSearchViewLayer.cpp  RewardGroupLayer.cpp  RewardViewLayer.cpp
src/modify/dankmeme.globed2/: FeaturedListLayer.cpp  GlobedFeaturedListLayer.cpp  GlobedLevelListLayer.cpp  (+5 more)
(+62 files in other folders)
